Add NeoForge 1.21.1 platform worktree updates and pack compatibility