@@ -1,8 +1,8 @@
 package com.dfsek.terra.mod.util;
 
+import com.google.common.collect.ImmutableMap;
 import net.minecraft.registry.Registry;
 import net.minecraft.registry.entry.RegistryEntry;
-import net.minecraft.registry.tag.TagGroupLoader.RegistryTags;
 import net.minecraft.registry.tag.TagKey;
 import net.minecraft.registry.tag.WorldPresetTags;
 import net.minecraft.world.biome.Biome;
@@ -14,7 +14,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 
 public final class TagUtil {
@@ -25,44 +24,37 @@ public final class TagUtil {
     }
 
     private static <T> Map<TagKey<T>, List<RegistryEntry<T>>> tagsToMutableMap(Registry<T> registry) {
-        return registry.streamTags().collect(HashMap::new,
-            (map, tag) -> map.put(tag.getTag(), tag.stream().collect(Collectors.toList())),
-            HashMap::putAll);
+        return registry
+            .streamTagsAndEntries()
+            .collect(HashMap::new,
+                (map, pair) ->
+                    map.put(pair.getFirst(), new ArrayList<>(pair.getSecond().stream().toList())),
+                HashMap::putAll);
     }
 
     public static void registerWorldPresetTags(Registry<WorldPreset> registry) {
-        logger.info("Registering Preset Tags.");
+        logger.info("Doing preset tag garbage....");
         Map<TagKey<WorldPreset>, List<RegistryEntry<WorldPreset>>> collect = tagsToMutableMap(registry);
 
         PresetUtil
             .getPresets()
-            .forEach(pair -> MinecraftUtil
-                .getEntry(registry, pair.getLeft())
+            .forEach(id -> MinecraftUtil
+                .getEntry(registry, id)
                 .ifPresentOrElse(
-                    preset -> {
-                        boolean useExtendedTag = pair.getRight(); // Get the boolean value from the pair
-                        collect
-                            .computeIfAbsent(useExtendedTag ? WorldPresetTags.EXTENDED : WorldPresetTags.NORMAL, tag -> new ArrayList<>())
-                            .add(preset);
-                    },
-                    () -> logger.error("Preset {} does not exist!", pair.getLeft())));
+                    preset -> collect
+                        .computeIfAbsent(WorldPresetTags.NORMAL, tag -> new ArrayList<>())
+                        .add(preset),
+                    () -> logger.error("Preset {} does not exist!", id)));
 
-        registry.startTagReload(new RegistryTags<>(registry.getKey(), collect)).apply();
-
-
-        if(logger.isDebugEnabled()) {
-            registry.streamEntries()
-                .map(e -> e.registryKey().getValue() + ": " +
-                          e.streamTags().reduce("", (s, t) -> t.id() + ", " + s, String::concat))
-                .forEach(logger::debug);
-        }
+        registry.clearTags();
+        registry.populateTags(ImmutableMap.copyOf(collect));
     }
 
     public static void registerBiomeTags(Registry<Biome> registry) {
         logger.info("Doing biome tag garbage....");
         Map<TagKey<Biome>, List<RegistryEntry<Biome>>> collect = tagsToMutableMap(registry);
 
-        BiomeUtil
+        MinecraftUtil
             .getTerraBiomeMap()
             .forEach((vb, terraBiomes) ->
                 MinecraftUtil
@@ -98,7 +90,8 @@ public final class TagUtil {
                                         tb))),
                         () -> logger.error("No vanilla biome: {}", vb)));
 
-        registry.startTagReload(new RegistryTags<>(registry.getKey(), collect)).apply();
+        registry.clearTags();
+        registry.populateTags(ImmutableMap.copyOf(collect));
 
         if(logger.isDebugEnabled()) {
             registry.streamEntries()
